raw/helloworld--2016-11-11-04-24-18--2.log
commit 280362a02df97670dd08ed19557c81b504b395c3
Merge: 3ac9ec7 12f0b6f
Author: bors <bors@rust-lang.org>
Date:   Thu Nov 10 23:44:44 2016 -0800

    Auto merge of #36615 - sinkuu:e0243_0244, r=nrc
    
    Make E0243/E0244 message consistent with E0107
    
    E0243/E0233 prints `expected {}, found {}` on the span note, while E0107 prints it on the first line. This is confusing when both error occur simultaneously.
    
    This PR makes E0243/E0233 print `expected {}, found {}` on the first line.
    
    Code:
    
    ``` rust
    struct Foo<'a, 'b> {
        s: &'a str,
        t: &'b str,
    }
    
    type Bar<T, U> = Foo<T, U>;
    ```
    
    rustc output (before):
    
    ```
    error[E0107]: wrong number of lifetime parameters: expected 2, found 0
     --> test.rs:6:18
      |
    6 | type Bar<T, U> = Foo<T, U>;
      |                  ^^^^^^^^^ expected 2 lifetime parameters
    
    error[E0244]: wrong number of type arguments
     --> test.rs:6:18
      |
    6 | type Bar<T, U> = Foo<T, U>;
      |                  ^^^^^^^^^ expected no type arguments, found 2
    ```
    
    rustc output (after):
    
    ```
    error[E0107]: wrong number of lifetime parameters: expected 2, found 0
     --> /tmp/test.rs:6:18
      |
    6 | type Bar<T, U> = Foo<T, U>;
      |                  ^^^^^^^^^ expected 2 lifetime parameters
    
    error[E0244]: wrong number of type arguments: expected 0, found 2
     --> /tmp/test.rs:6:18
      |
    6 | type Bar<T, U> = Foo<T, U>;
      |                  ^^^^^^^^^ expected no type arguments
    ```
rustc: ./helloworld
cargo rustc  -- -Ztime-passes -Zinput-stats
   Compiling helloworld v0.1.0 (file:///root/benchmarks/helloworld)
time: 0.000; rss: 41MB	parsing
Lines of code:             3
Pre-expansion node count:  8
time: 0.000; rss: 41MB	recursion limit
time: 0.000; rss: 41MB	crate injection
time: 0.000; rss: 41MB	plugin loading
time: 0.000; rss: 41MB	plugin registration
time: 0.012; rss: 62MB	expansion
time: 0.000; rss: 62MB	maybe building test harness
time: 0.000; rss: 62MB	maybe creating a macro crate
Post-expansion node count: 68
time: 0.000; rss: 62MB	checking for inline asm in case the target doesn't support it
time: 0.000; rss: 62MB	complete gated feature checking
time: 0.000; rss: 62MB	early lint checks
time: 0.000; rss: 62MB	AST validation
time: 0.002; rss: 62MB	name resolution
time: 0.000; rss: 62MB	lowering ast -> hir
time: 0.000; rss: 66MB	indexing hir
time: 0.000; rss: 66MB	attribute checking
time: 0.000; rss: 66MB	language item collection
time: 0.000; rss: 66MB	lifetime resolution
time: 0.000; rss: 66MB	looking for entry point
time: 0.000; rss: 66MB	looking for plugin registrar
time: 0.000; rss: 66MB	region resolution
time: 0.000; rss: 66MB	loop checking
time: 0.000; rss: 66MB	static item recursion checking
time: 0.000; rss: 66MB	compute_incremental_hashes_map
time: 0.000; rss: 66MB	load_dep_graph
time: 0.000; rss: 66MB	type collecting
time: 0.000; rss: 66MB	variance inference
time: 0.004; rss: 66MB	coherence checking
time: 0.000; rss: 66MB	wf checking
time: 0.000; rss: 66MB	item-types checking
time: 0.000; rss: 66MB	item-bodies checking
time: 0.000; rss: 66MB	drop-impl checking
time: 0.000; rss: 66MB	const checking
time: 0.000; rss: 66MB	privacy checking
time: 0.000; rss: 66MB	stability index
time: 0.000; rss: 66MB	intrinsic checking
time: 0.000; rss: 66MB	effect checking
time: 0.000; rss: 66MB	match checking
time: 0.000; rss: 66MB	liveness checking
time: 0.000; rss: 66MB	rvalue checking
time: 0.000; rss: 66MB	MIR dump
  time: 0.000; rss: 66MB	SimplifyCfg
  time: 0.000; rss: 66MB	QualifyAndPromoteConstants
  time: 0.000; rss: 66MB	TypeckMir
  time: 0.000; rss: 66MB	SimplifyBranches
  time: 0.000; rss: 66MB	SimplifyCfg
time: 0.000; rss: 66MB	MIR cleanup and validation
time: 0.000; rss: 66MB	borrow checking
time: 0.000; rss: 66MB	reachability checking
time: 0.000; rss: 66MB	death checking
time: 0.000; rss: 66MB	stability checking
time: 0.000; rss: 66MB	unused lib feature checking
time: 0.000; rss: 66MB	lint checking
time: 0.001; rss: 66MB	resolving dependency formats
  time: 0.000; rss: 66MB	NoLandingPads
  time: 0.000; rss: 66MB	SimplifyCfg
  time: 0.000; rss: 66MB	EraseRegions
  time: 0.000; rss: 66MB	AddCallGuards
  time: 0.000; rss: 66MB	ElaborateDrops
  time: 0.000; rss: 66MB	NoLandingPads
  time: 0.000; rss: 66MB	SimplifyCfg
  time: 0.000; rss: 66MB	InstCombine
  time: 0.000; rss: 66MB	Deaggregator
  time: 0.000; rss: 66MB	CopyPropagation
  time: 0.000; rss: 66MB	SimplifyLocals
  time: 0.000; rss: 66MB	AddCallGuards
  time: 0.000; rss: 66MB	PreTrans
time: 0.000; rss: 66MB	MIR optimisations
  time: 0.000; rss: 71MB	write metadata
  time: 0.000; rss: 71MB	translation item collection
  time: 0.000; rss: 71MB	codegen unit partitioning
  time: 0.000; rss: 74MB	internalize symbols
time: 0.005; rss: 74MB	translation
time: 0.000; rss: 74MB	assert dep graph
time: 0.000; rss: 74MB	serialize dep graph
  time: 0.000; rss: 74MB	llvm function passes [0]
  time: 0.000; rss: 74MB	llvm module passes [0]
  time: 0.002; rss: 74MB	codegen passes [0]
  time: 0.000; rss: 74MB	codegen passes [0]
time: 0.003; rss: 74MB	LLVM passes
time: 0.000; rss: 74MB	serialize work products
  time: 0.070; rss: 74MB	running linker
time: 0.071; rss: 77MB	linking
done
